完成底部弹窗设计

--- a/dialog/src/main/res/values/strings.xml
+++ b/dialog/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">IosLike</string>
+    <string name="cancel">取消</string>
+    <string name="confirm">确定</string>
 </resources>
